<resources>
    <string name="app_name">Hola Personalizado</string>
    <string name="hello">Hola</string>
    <string name="nombre">¿Cual es tu nombre?</string>
    <string name="saludoSr">Señor</string>
    <string name="saludoSra">Señora</string>
    <string name="saludo">Saludo</string>
    <string name="tiempo">Mostrar hora</string>
    <string name="noNameMsg">No se ha introducido el Nombre</string>
</resources>